tests/ui/uninhabited/uninhabited-unstable-field.exhaustive.stderr
error[E0004]: non-exhaustive patterns: type `Foo<Void>` is non-empty
  --> $DIR/uninhabited-unstable-field.rs:13:11
   |
LL |     match x {}
   |           ^
   |
note: `Foo<Void>` defined here
  --> $DIR/auxiliary/staged-api.rs:5:1
   |
LL | pub struct Foo<T> {
   | ^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `Foo<Void>`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern as shown
   |
LL ~     match x {
LL +         _ => todo!(),
LL ~     }
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0004`.
